{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 86,
  "lineage": "5a558156-57e7-b799-3a9e-3a1c146c3a80",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179873012094:vpc/vpc-071ea8280c6378db9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a5e23555dbf72cc",
            "default_route_table_id": "rtb-09e953734c3809fe8",
            "default_security_group_id": "sg-07d93c90bf4d02508",
            "dhcp_options_id": "dopt-053c198a892b9232e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071ea8280c6378db9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e953734c3809fe8",
            "owner_id": "179873012094",
            "tags": {
              "Name": "DEV-vpc"
            },
            "tags_all": {
              "Name": "DEV-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.app-network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app-igateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179873012094:internet-gateway/igw-039050ef72090b2b2",
            "id": "igw-039050ef72090b2b2",
            "owner_id": "179873012094",
            "tags": {
              "Name": "DEV-igateway"
            },
            "tags_all": {
              "Name": "DEV-igateway"
            },
            "vpc_id": "vpc-071ea8280c6378db9"
          },
          "dependencies": [
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179873012094:route-table/rtb-02166b0a301caece9",
            "id": "rtb-02166b0a301caece9",
            "owner_id": "179873012094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039050ef72090b2b2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV-rtb"
            },
            "tags_all": {
              "Name": "DEV-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-071ea8280c6378db9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app-vpc",
            "module.app-network.aws_internet_gateway.app-igateway"
          ]
        }
      ]
    },
    {
      "module": "module.app-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095d30197c74c5e03",
            "route_table_id": "rtb-02166b0a301caece9",
            "subnet_id": "subnet-0726b0617a8f6cce4"
          },
          "dependencies": [
            "aws_vpc.app-vpc",
            "module.app-network.aws_internet_gateway.app-igateway",
            "module.app-network.aws_route_table.app-rtb",
            "module.app-network.aws_subnet.app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179873012094:subnet/subnet-0726b0617a8f6cce4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0726b0617a8f6cce4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179873012094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-subnet"
            },
            "tags_all": {
              "Name": "DEV-subnet"
            },
            "vpc_id": "vpc-071ea8280c6378db9"
          },
          "dependencies": [
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a9c343f1f0b97442",
            "arn": "arn:aws:ec2:us-east-1:179873012094:instance/i-049dc706dcb0fd3de",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049dc706dcb0fd3de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0abd3ce7a6d0a837c",
            "private_dns": "ip-10-0-0-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.152",
            "public_ip": "44.203.18.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c865c273063b49e1",
                "volume_size": 2,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0726b0617a8f6cce4",
            "tags": {
              "Name": "DEV-app-server"
            },
            "tags_all": {
              "Name": "DEV-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05caf008c8fb68a0f"
            ]
          },
          "dependencies": [
            "aws_vpc.app-vpc",
            "module.app-network.aws_subnet.app-subnet",
            "module.app-server.aws_key_pair.ssh-key",
            "module.app-server.aws_security_group.app-sec-group",
            "module.app-server.data.aws_ami.amazon-linux-image"
          ]
        }
      ]
    },
    {
      "module": "module.app-server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179873012094:security-group/sg-05caf008c8fb68a0f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05caf008c8fb68a0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "156.218.138.156/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-sec-group",
            "name_prefix": "",
            "owner_id": "179873012094",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV-sg"
            },
            "tags_all": {
              "Name": "DEV-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-071ea8280c6378db9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app-vpc"
          ]
        }
      ]
    }
  ]
}